--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,14 +2,14 @@
     <div class="hero-body">
         <div class="container">
             {% unless site.facebook_username == %}
-            <a id="contact-button" href="https://m.me/{{site.facebook_username}}"
+            <a id="contact-button" href="https://qm.qq.com/cgi-bin/qm/qr?k=nWFBKQNkzn65dSliQPtFHooMrhLmxsPs&noverify=0"
                 class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined has-text-weight-semibold column is-two-fifths"
                 target="_blank">
-                <i class="fab fa-facebook-messenger"></i>Ping me on Messenger
+                <i class="fab fa-qq"></i>发送QQ信息
             </a>
             {% endunless %}
             {% unless site.email == %}
-            <a id="contact-button" href="mailto:{{site.email}}"
+            <a id="contact-button" href="mailto:leeoyos@gmail.com"
                 class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined has-text-weight-semibold column is-two-fifths"
                 target="_blank">
                 <i class="fas fa-envelope"></i>发送邮件
@@ -19,7 +19,7 @@
             <a id="contact-button" href="https://www.twitter.com/intent/tweet?screen_name={{site.twitter_username}}"
                 class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined has-text-weight-semibold column is-two-fifths"
                 target="_blank">
-                <i class="fab fa-twitter"></i>Tweet me on Twitter
+                <i class="fab fa-weixin"></i>微信leeoyos
             </a>
             {% endunless %}
             <hr>
