--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -29,7 +29,8 @@
                     href="{{site.url}}{{site.baseurl}}/blog">动态</a>
                 <a class="navbar-item {% if page.layout == 'project' %}is-active{% endif %}"
                     href="{{site.url}}{{site.baseurl}}/project">Raid历史</a>
-                {% include dropdown.html %}
+                <!--下拉菜单-->
+                <!--{% include dropdown.html %}--> 
             </div>
 
         </div>
