--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar is-black is-fixed-top" role="navigation" aria-label="main navigation" id="navbar">
+an<nav class="navbar is-black is-fixed-top" role="navigation" aria-label="main navigation" id="navbar">
     <div class="container">
 
         <!-- logo or branding image on left side -->
@@ -23,12 +23,12 @@
             <div class="navbar-end">
                 <a class="navbar-item {% if page.layout == 'default' %}is-active{% endif %}"
                     href="{% if page.layout == 'default' %}{{site.url}}{{site.baseurl}}/#{% else %}{{site.url}}{{site.baseurl}}/{% endif %}">首页</a>
-                <a class="navbar-item" href="{{site.url}}{{site.baseurl}}/#about">关于我们</a>
+                <a class="navbar-item" href="{{site.url}}{{site.baseurl}}/#about">关于绿洲</a>
                 <a class="navbar-item" href="{{site.url}}{{site.baseurl}}/#contact">联系</a>
                 <a class="navbar-item {% if page.layout == 'blog' %}is-active{% endif %}"
                     href="{{site.url}}{{site.baseurl}}/blog">动态</a>
                 <a class="navbar-item {% if page.layout == 'project' %}is-active{% endif %}"
-                    href="{{site.url}}{{site.baseurl}}/project">Raid历史</a>
+                    href="{{site.url}}{{site.baseurl}}/project">成员简介</a>
                 
                 {% include dropdown.html %}
             </div>
