--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -28,7 +28,7 @@ an<nav class="navbar is-black is-fixed-top" role="navigation" aria-label="main n
                 <a class="navbar-item {% if page.layout == 'blog' %}is-active{% endif %}"
                     href="{{site.url}}{{site.baseurl}}/blog">动态</a>
                 <a class="navbar-item {% if page.layout == 'project' %}is-active{% endif %}"
-                    href="{{site.url}}{{site.baseurl}}/project">成员简介</a>
+                    href="{{site.url}}{{site.baseurl}}/team">成员简介</a>
                 
                 {% include dropdown.html %}
             </div>
